--- a/styles/main.css
+++ b/styles/main.css
@@ -22,9 +22,13 @@ body{
 }
 .locations{
     border: 1px solid goldenrod;
+    margin-left: 1em;
 }
 .tankTips{
     border: 1px solid yellowgreen;
+    margin-bottom: 1em;
+    border-top: 3px solid #000;
+    padding: 0.5em 0 0 0.5em;
 }
 .container{
     border: 1px dotted lavender;
