--- a/styles/main.css
+++ b/styles/main.css
@@ -14,20 +14,33 @@ body{
 }
 .fishList{
     border: 1px solid cornflowerblue;
-    padding-left: 10px;
+    padding: 10px;
+}
+
+.fish_card{
+    margin: 15px;
 }
 
 .quotes{
     border: 1px solid green;
 }
+
+.quote{   
+    padding: 7px;
+    /* margin: 10px; */
+}
 .locations{
     border: 1px solid goldenrod;
+}
+.locationList{
     margin-left: 1em;
+    margin-top: 1em;
+
 }
 .tankTips{
     border: 1px solid yellowgreen;
     margin-bottom: 1em;
-    border-top: 3px solid #000;
+    /* border-top: 3px solid #000; */
     padding: 0.5em 0 0 0.5em;
 }
 .container{
